<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".informasi_new">
    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/bg_beepet1"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginTop="400dp"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/alamat"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/alamat"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/text_alamat"
        android:layout_width="213dp"
        android:layout_height="81dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/text_alamat"
        android:textColor="@color/black"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/noHP"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/notelp"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/text_notelp"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="175dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/text_notelp"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <ImageView
        android:layout_width="145dp"
        android:layout_height="135dp"
        android:layout_marginStart="235dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/maps_daengta" />
</FrameLayout>